preventing overflow of cms container

--- a/source/styles/cms-container.scss
+++ b/source/styles/cms-container.scss
@@ -1,5 +1,6 @@
 .cms-container {
   color: var(--cms-text-colour);
+  overflow: hidden;
 }
 
 .cms-content-header {
@@ -96,6 +97,8 @@
 }
 
 a .jstree-pageicon,
+.record-icon,
+a .jstree-recordicon,
 .cms-tree ul li a,
 .ui-widget,
 .ui-widget-content,
